[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse-uk-agent"
dynamic = ["version"]
description = "PULSE UK Cultural Intelligence Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{name = "PULSE Team"}]
keywords = ["ai", "agent", "cultural-intelligence", "uk", "adk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "google-adk",
    "google-cloud-aiplatform[adk,agent_engines]>=1.111",
    "praw",
    "google-api-python-client",
    "requests",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/your-org/pulse-uk-agent"
Documentation = "https://github.com/your-org/pulse-uk-agent"
Repository = "https://github.com/your-org/pulse-uk-agent"

[tool.hatch.version]
path = "agents/pulse_uk/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["agents"]